Update font link index.css

--- a/index.css
+++ b/index.css
@@ -7,7 +7,7 @@ Hover: #a5a5a5
 */
 
 @font-face{
-    src: url(fonts/InterstatePlusRegular.otf);
+    src: url(fonts/interstate-plus-5.otf);
     font-family: InterstatePlus;
 }
 
